fix (#378): safari does not support column gap

--- a/src/components/Navigation.module.css
+++ b/src/components/Navigation.module.css
@@ -98,7 +98,10 @@
 .profile {
   align-items: center;
   display: flex;
-  gap: 0.5rem;
+}
+
+.profile span {
+  margin-right: 0.5rem;
 }
 
 .avatar {
